--- a/Todoey 2/Base.lproj/Main.storyboard
+++ b/Todoey 2/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="vLu-tx-f1N" id="reN-vL-TP3"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="Q1C-Lg-oP0"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="Q1C-Lg-oP0">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Net-Iv-wRh">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="vLu-tx-f1N" id="o4r-4S-cfd"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ip3-RE-PKe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
